Converted px to rem and fixed alignments

--- a/src/components/atoms/button/button.module.css
+++ b/src/components/atoms/button/button.module.css
@@ -128,14 +128,14 @@ button {
 
 .myProfile1:hover {
   background-color: #f5f5f5;
-  border: 2px solid #f0c000;
+  border: .125rem solid #f0c000;
 }
 
 .myProfile2 {
-  height: 40px;
+  height: 2.5rem;
   font-style: normal;
   font-weight: 700;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 155.4%;
 
   text-align: center;
@@ -143,7 +143,7 @@ button {
   text-transform: uppercase;
 
   border-radius: 0%;
-  border: 5px solid #f0c000;
+  border:   solid #f0c000;
   color: #835932;
   background: #f5f5f5;
   transition-duration: 0.4s;
