--- a/src/components/atoms/small-title/small-title.module.css
+++ b/src/components/atoms/small-title/small-title.module.css
@@ -42,7 +42,7 @@
   font-family: "Baloo";
   font-style: normal;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 1.25rem;
   line-height: 155.4%;
   /* identical to box height, or 31px */
 
