--- a/src/components/atoms/supersubheading/supersubheading.module.css
+++ b/src/components/atoms/supersubheading/supersubheading.module.css
@@ -8,7 +8,7 @@
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
-  font-size: 12px;
+  font-size: .75rem;
   line-height: 155.4%;
   /* identical to box height, or 19px */
   
@@ -21,7 +21,7 @@
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 155.4%;
   /* identical to box height, or 19px */
   
