--- a/src/components/my-profile/hero.module.css
+++ b/src/components/my-profile/hero.module.css
@@ -2,8 +2,8 @@
     position: absolute;
     width: 100vw;
     height: 25vh;
-    left: 0px;
-    top: 0px;
+    left: 0rem;
+    top: 0rem;
     background: black;
 
     /* background-position: center;
